--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Portfolio Persona</title>
+</head>
+<body>
+
+
 <nav id="navbar" class="nav">
   <ul class="nav-list">
     <li>
@@ -74,7 +85,7 @@
       </p>
     </a>
     <a
-      href="https://codepen.io/Avenda-o/pen/rNYwzeG"
+      href="https://josant12.github.io/Build-a-Technical-Documentation-Page/"
       target="_blank"
       class="project project-tile"
     >
@@ -164,3 +175,7 @@
     ></a>
   </p>
 </footer>
+
+
+</body>
+</html>
