--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <div class="projects-grid">
     <a
-      href="https://codepen.io/Avenda-o/pen/oNoWQqd"
+      href="https://josant12.github.io/Build-a-Tribute-Page/"
       target="_blank"
       class="project project-tile"
     >
@@ -53,7 +53,7 @@
       </p>
     </a>
     <a
-      href="https://codepen.io/Avenda-o/pen/VwrWZym"
+      href="https://josant12.github.io/Build-a-Survey-Form/"
       target="_blank"
       class="project project-tile"
     >
@@ -69,7 +69,7 @@
       </p>
     </a>
     <a
-      href="https://codepen.io/Avenda-o/pen/mdqwyLJ"
+      href="https://josant12.github.io/Build-a-Technical-Documentation-Page/"
       target="_blank"
       class="project project-tile"
     >
@@ -85,7 +85,7 @@
       </p>
     </a>
     <a
-      href="https://josant12.github.io/Build-a-Technical-Documentation-Page/"
+      href="https://codepen.io/Avenda-o/pen/rNYwzeG"
       target="_blank"
       class="project project-tile"
     >
